# libyuv

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sr/hj/libyuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Log.cpp  Log.h  libyuv_utils.cpp  native-lib.cpp  native_utils.h
app/src/main/java/com/sr/hj/libyuv/: Libyuv.java  MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sr/hj/libyuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
